tests/baselines/reference/noImplicitSymbolToString.errors.txt
tests/cases/compiler/noImplicitSymbolToString.ts(6,30): error TS2352: Type 'symbol' cannot be converted to type 'string'.
tests/cases/compiler/noImplicitSymbolToString.ts(7,30): error TS2469: The '+' operator cannot be applied to type 'symbol'.
tests/cases/compiler/noImplicitSymbolToString.ts(8,8): error TS2469: The '+=' operator cannot be applied to type 'symbol'.
tests/cases/compiler/noImplicitSymbolToString.ts(13,47): error TS2352: Type 'symbol' cannot be converted to type 'string'.
tests/cases/compiler/noImplicitSymbolToString.ts(13,90): error TS2352: Type 'symbol' cannot be converted to type 'string'.


==== tests/cases/compiler/noImplicitSymbolToString.ts (5 errors) ====
    // Fix #19666
    
    let symbol!: symbol;
    let str = "hello ";
    
    const templateStr = `hello ${symbol}`;
                                 ~~~~~~
!!! error TS2352: Type 'symbol' cannot be converted to type 'string'.
    const appendStr = "hello " + symbol;
                                 ~~~~~~
!!! error TS2469: The '+' operator cannot be applied to type 'symbol'.
    str += symbol;
           ~~~~~~
!!! error TS2469: The '+=' operator cannot be applied to type 'symbol'.
    
    let symbolUnionNumber!: symbol | number;
    let symbolUnionString!: symbol | string;
    
    const templateStrUnion = `union with number ${symbolUnionNumber} and union with string ${symbolUnionString}`;
                                                  ~~~~~~~~~~~~~~~~~
!!! error TS2352: Type 'symbol' cannot be converted to type 'string'.
                                                                                             ~~~~~~~~~~~~~~~~~
!!! error TS2352: Type 'symbol' cannot be converted to type 'string'.
    